fixed css for cards, removed flex wrap

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,6 @@ nav{
   border-radius: 10px;
   background-color: rgb(233, 232, 232);
   display: flex;
-  flex-wrap: wrap;
   flex-basis: calc(50% - 0.25rem);
   transition: background-color 300ms ease;
 }
@@ -118,13 +117,10 @@ nav{
 .card-img{
   display: block;
   margin-right: 1rem;
-  max-width: 30%;
-  max-height: 30%;
+  max-width: 200px;
+  max-height: 200px;
   border-radius: 50%;
 }
-/* .name-ingredients{
- width: 60%;
-}  */
 .drink-name{
   font-weight: 400;
 }
@@ -209,7 +205,6 @@ nav{
     border-radius: 10px;
     background-color: rgb(233, 232, 232);
     display: flex;
-    flex-wrap: wrap;
     transition: none;
     flex-basis: 100%;
     justify-content:flex-start;
@@ -222,7 +217,7 @@ nav{
       max-height: 100px;
   }
   .drink-name{
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .drink-instructions{
     font-size: 0.8rem;
